# seedcase-soil

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  class_index.html  function_index.html  index.html  index.qmd  justfile  mypy.ini  pyproject.toml  status.json  z_0fbd8590adc3a276___init___py.html  z_0fbd8590adc3a276_beautify_cli_py.html  z_0fbd8590adc3a276_docs_py.html  z_0fbd8590adc3a276_errors_py.html  z_0fbd8590adc3a276_example_datapackage_py.html  z_0fbd8590adc3a276_file_tree_py.html  z_0fbd8590adc3a276_functionals_py.html  z_0fbd8590adc3a276_parse_source_py.html  z_0fbd8590adc3a276_properties_io_py.html  z_0fbd8590adc3a276_read_properties_py.html
.github/workflows/: release-package.yml
docs/includes/: _badges.qmd  site-counter.html
src/seedcase_soil/: __init__.py  beautify_cli.py  docs.py  errors.py  example_datapackage.py  file_tree.py  functionals.py  parse_source.py  properties_io.py  read_properties.py
src/seedcase_soil/example-datapackages/: README.md  flora-imperfect.json  flora.json  simple.json  woolly.json
src/seedcase_soil/examples/: imperfect-datapackage.json
stubs/seedir/: __init__.pyi
tests/: conftest.py  test_beautify_cli.py  test_file_tree.py  test_functionals.py  test_parse_source.py  test_properties_io.py  test_read_properties.py
tools/: generate-help-strings.py  get-contributors.sh
