[project]
name = "seedcase-soil"
version = "0.7.1"
description = "Common ground shared by Seedcase Python packages"
authors = [
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
  { name = "Joel Ostblom", email = "joel@joelostblom.com" },
]
maintainers = [
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
  { name = "Joel Ostblom", email = "joel@joelostblom.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = ["cyclopts>=4.10.1", "rich>=14.3.3"]

[project.urls]
homepage = "https://soil.seedcase-project.org"
repository = "https://github.com/seedcase-project/seedcase-soil"
changelog = "https://github.com/seedcase-project/seedcase-soil/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/seedcase-soil/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "commitizen>=4.13.9",
  "genbadge>=1.1.3",
  "jupyter>=1.1.1",
  "mypy>=1.20.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "pytest-cov>=7.1.0",
  "quartodoc>=0.11.1",
  "ruff>=0.15.8",
  "types-tabulate>=0.10.0.20260308",
  "typos>=1.44.0",
  "vulture>=2.16",
]
